--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 logging.level.org.springframework: INFO
 server.port: 8199
-management.security.enabled: false
+
+management.security.enabled: false    # only needed in Spring boot 1.x
+management.endpoints.web.exposure.include: "*"  # only needed in Spring boot 2.0.0.RELEASE
 
 spring:
   datasource:
